#379 FEAT : add PortGenerator.generateFor and UnitTestHelper.waitForDone